syntax = "proto3";

option go_package  = "github.com/zededa/api/zconfig";
option java_package = "com.zededa.cloud.uservice.proto";

import "devcommon.proto";
import "appconfig.proto";
import "baseosconfig.proto";
import "netconfig.proto";
import "storage.proto";


message MapServer {
        string NameOrIp   = 1;
        string Credential = 2;
}

message ZedServer {
        string HostName   = 1;
        repeated string EID = 2;
}

message DeviceLispDetails {
        repeated MapServer LispMapServers = 1;
        uint32 LispInstance = 2;
        string EID = 4;
        uint32 EIDHashLen = 5;
        repeated ZedServer ZedServers = 6;
        bytes EidAllocationPrefix = 8;
        uint32 EidAllocationPrefixLen = 9;
        string ClientAddr = 10;
}
enum DeviceCmdType {
	OpsInvalid = 0;
	Reset      = 1;
	Backup     = 2;
}

// Device Operational Commands Semantic
// For rebooting device,  command=Reset, desiredState = on
// For poweroff device,  command=Reset, desiredState = off
// For backup at midnight, command=Backup, desiredState=n/a, opsTime = mm/dd/yy:hh:ss 
//
message DeviceOpsCmd {
	DeviceCmdType command = 1;
	uint32 counter = 2;
	bool desriedState = 3;
	string opsTime = 4;
}

message EdgeDevConfig {
	UUIDandVersion id = 1;
	bytes devConfigSha256 = 2;
	bytes devConfigSignature = 3;
	
	repeated AppInstanceConfig apps   = 4;
	repeated NetworkConfig networks = 5;
	repeated DatastoreConfig datastores = 6;

	DeviceLispDetails lispInfo = 7;
	repeated BaseOSConfig base = 8;	// BaseOSImage config block
	repeated DeviceOpsCmd operations = 9; // process in order
}
